[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.5",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "psutil>=5.9.0",
    "cloudinary>=1.36.0",
    "pymongo[srv]>=4.6.0",
    "flask-login>=0.6.0",
    "bcrypt>=4.0.0",
    "flask-bcrypt>=1.0.0",
    "flask-pymongo>=2.3.0",
    "requests>=2.31.0",
]
